Audio playback doesn't work when a VSE sound strip is copy/pasted to a new scene #78129

Closed
opened 2020-06-22 14:54:42 +02:00 by Tomasz Kaye · 10 comments

System Information
Operating system: Darwin-19.3.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.5.5

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-12 17:01, hash: fd8d245e6a

Short description of error
Audio playback doesn't work when a VSE sound strip is copy/pasted to a new scene

Exact steps for others to reproduce the error

  • File > new > Video Editing
  • Add > Sound. Choose a .wav file. In the sequencer, confirm it's playing correctly by clicking play on the transport.
  • Select and copy the sound strip to the clipboard
  • Create a new scene.
  • Paste the strip into the VSE in the new scene.
  • Play the new scene. There's no audio.
**System Information** Operating system: Darwin-19.3.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.5.5 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-12 17:01, hash: `fd8d245e6a` **Short description of error** Audio playback doesn't work when a VSE sound strip is copy/pasted to a new scene **Exact steps for others to reproduce the error** * File > new > Video Editing * Add > Sound. Choose a .wav file. In the sequencer, confirm it's playing correctly by clicking play on the transport. * Select and copy the sound strip to the clipboard * Create a new scene. * Paste the strip into the VSE in the new scene. * Play the new scene. There's no audio.
Author

Added subscriber: @info-27

Added subscriber: @info-27

#78200 was marked as duplicate of this issue

#78200 was marked as duplicate of this issue
Author

More information about the bug (and workaround):

Saving the blend file seems to correct the audio problem. You can hear the sound strip in the new scene after saving the file.

More information about the bug (and workaround): Saving the blend file seems to correct the audio problem. You can hear the sound strip in the new scene after saving the file.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @Sergey

Added subscriber: @Sergey

Quick guess: pasting strip should tag depsgraph relations for update.

Quick guess: pasting strip should tag depsgraph relations for update.

Added subscriber: @iss

Added subscriber: @iss

In #78129#964061, @Sergey wrote:
Quick guess: pasting strip should tag depsgraph relations for update.

Would be my guess as well, but it does. I think that I have messed something up like in #77669. Will have to check.

> In #78129#964061, @Sergey wrote: > Quick guess: pasting strip should tag depsgraph relations for update. Would be my guess as well, but it does. I think that I have messed something up like in #77669. Will have to check.

This issue was referenced by e6e67da4ea

This issue was referenced by e6e67da4ea5026a26e0a1ead19ae91412a74bc4d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-06-26 17:01:10 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:27:13 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78129
No description provided.