Fix T78129: No audio playback with sound strip pasted to a new scene

Add DEG_relations_tag_update(bmain).

Reviewed By: sergey

Differential Revision: https://developer.blender.org/D8130